--- a/app/views/notification_mailer/reply_notification.html.haml
+++ b/app/views/notification_mailer/reply_notification.html.haml
@@ -1,3 +1,8 @@
-NotificationMailer#reply_notification
+/ NotificationMailer#reply_notification
 
-= @greeting + ", find me in app/views/notification_mailer/reply_notification.text.haml"
+%p="Dear #{@user.name}"
+%p="Your friend replied your comment in the question below."
+-if !@question.blank?
+  =link_to @question.title,question_url(@question)
+%p="Thank you"
+%p="Green Dolphin"
