--- a/app/views/notifications/_notification.html.haml
+++ b/app/views/notifications/_notification.html.haml
@@ -6,3 +6,5 @@
   =render 'expert_notification', notification: notification
 - elsif notification.sendable_type.blank? and notification.content == 'NotExpert'
   =render 'unexpert_notification', notification: notification
+- elsif notification.sendable_type == 'Reply'
+  =render 'reply_notification', notification: notification
