The temp landiing page

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -7,3 +7,27 @@
     %p
       %h1 Green Dolphin
       %h1 Learning by answering
+      %hr
+    %p Green Dolphin (GD) is a question and answer website. It is designed to fulfill students’ needs for collaborative learning by allowing them to interact with and ask questions of the professional community consisting of their classmates, professors and TAs.
+.row
+  .span12
+    %ul.thumbnails
+      %li.span6
+        .thumbnail
+          =image_tag 'Knowledge flow chart_2.JPG'
+      %li.span6
+        .thumbnail
+          =image_tag 'GreenDolphin_bar.gif'
+          .caption
+            %h3 GD delays TAs’ and professors’ answers.
+      %li.span6
+        .thumbnail
+          =image_tag 'GreenDolphin_points.gif'
+          .caption
+            %h3 GD has a point-based incentive system.
+      %li.span6
+        .thumbnail
+          =image_tag 'GreenDolphin1.gif'
+      %li.span6
+        .thumbnail
+          =image_tag 'GreenDolphin5.gif'
