--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,6 +7,7 @@
     %title= content_for?(:title) ? yield(:title) : "Green Dophins"
     %meta{:content => "", :name => "description"}
     %meta{:content => "", :name => "author"}
+    = favicon_link_tag
     = stylesheet_link_tag    "application", :media => "all"
     = csrf_meta_tags
     = yield(:head)
