--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -35,8 +35,8 @@
             = link_to('Logout', destroy_user_session_path, :method=>'delete')
   - else
     %ul.nav.pull-right
-      %li
-        = link_to('Sign up', new_user_registration_path)
-      %li.divider-vertical
+      / %li
+      /   = link_to('Sign up', new_user_registration_path)
+      / %li.divider-vertical
       %li
         = link_to('Login', new_user_session_path)
