--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -31,6 +31,7 @@
         fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
       :javascript
         var _gaq = _gaq || [];
+        #{ENV['MAILER_URL']}
         #{ENV['MAILER_URL'] == 'gdolphin.org' ? "_gaq.push(['_setAccount', 'UA-38901946-1']);" : "_gaq.push(['_setAccount', 'UA-37371160-1']);"}
         _gaq.push(['_trackPageview']);
         #{Rails.env.production? ? '': "_gaq.push(['_setDomainName', 'none']);"} 
