Fix a typo and add description

--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -2,7 +2,7 @@
   %span.icon-bar
   %span.icon-bar
   %span.icon-bar
-= link_to "Green Dophin", root_path, :class => 'brand'
+= link_to "Green Dolphin", root_path, :class => 'brand'
 .nav-collapse.collapse{:style => "height: 0px;"}
   - if user_signed_in?
     %ul.nav
