--- a/app/views/user_feedbacks/show.html.haml
+++ b/app/views/user_feedbacks/show.html.haml
@@ -11,7 +11,7 @@
       .span1
         = show_type_feedback @user_feedback.type_feedback
       .span1
-        = close_status @user_feedback.type_feedback
+        = close_status @user_feedback.close
       .span5
         - user = User.find(@user_feedback.user_id)
         = image_tag user_gravatar(user, 34) 
