--- a/app/views/user_feedbacks/show.html.haml
+++ b/app/views/user_feedbacks/show.html.haml
@@ -18,6 +18,22 @@
         = user.name
         %strong= 'posted'
         #{time_ago_in_words(@user_feedback.created_at)} ago.
+      .span1
+        - if current_user.has_role? :admin || owner
+          .btn-group.pull-right
+            %a.btn.btn-mini.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
+              %i.icon-cog
+              %span.caret
+            %ul.dropdown-menu
+              %li
+                = link_to edit_user_feedback_path(@user_feedback) do
+                  %i.icon-edit
+                  Edit 
+              %li.divider
+              %li
+                = link_to @user_feedback, :data => {:confirm => 'Are you sure?'}, :method => :delete do
+                  %i.icon-trash
+                  Delete
     .row
       .span8
         =render @user_replies
