--- a/app/views/notification_mailer/expert_notification.html.haml
+++ b/app/views/notification_mailer/expert_notification.html.haml
@@ -1,7 +1,7 @@
 / NotificationMailer#expert_notification
 
 ="Dear #{@user.name}"
-%p="Pleas help your friend! Your classmate ask you a question below."
+%p="Please help your friend! Your classmate ask you a question below."
 -if !@question.blank?
   =link_to @question.title,question_url(@question)
 %p="Thank you"
