--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -30,6 +30,8 @@
           - if current_user.has_role? :admin
             %li
               = link_to('Admin', users_path)
+          %li
+            = link_to "Help", help_users_path
           %li.divider
           %li
             = link_to('Logout', destroy_user_session_path, :method=>'delete')
