Add the logo to emails

--- a/app/views/notification_mailer/expert_notification.html.haml
+++ b/app/views/notification_mailer/expert_notification.html.haml
@@ -1,4 +1,5 @@
 / NotificationMailer#expert_notification
+=image_tag attachments["greendolphin_logo.png"].url
 
 ="Dear #{@user.name}"
 %p="Please help your friend! Your classmate ask you a question below."
