--- a/app/views/notification_mailer/comment_notification.html.haml
+++ b/app/views/notification_mailer/comment_notification.html.haml
@@ -1,4 +1,5 @@
 / NotificationMailer#comment_notification
+=image_tag attachments["greendolphin_logo.png"].url
 
 %p="Dear #{@user.name}"
 %p="Your friend answered your question below."
