--- a/app/views/notification_mailer/good_answer_notification.html.haml
+++ b/app/views/notification_mailer/good_answer_notification.html.haml
@@ -1,4 +1,5 @@
 /NotificationMailer#good_answer_notification
+=image_tag attachments["greendolphin_logo.png"].url
 
 %p="Dear #{@user.name}"
 %p="Your answer of the question below was selected to be the best answer."
