--- a/app/views/notification_mailer/reply_notification.html.haml
+++ b/app/views/notification_mailer/reply_notification.html.haml
@@ -1,4 +1,5 @@
 / NotificationMailer#reply_notification
+=image_tag attachments["greendolphin_logo.png"].url
 
 %p="Dear #{@user.name}"
 %p="Your friend replied your comment in the question below."
