--- a/app/views/notification_mailer/useful_notification.html.haml
+++ b/app/views/notification_mailer/useful_notification.html.haml
@@ -1,3 +1,5 @@
+=image_tag attachments["greendolphin_logo.png"].url
+
 %p="Dear #{@user.name}"
 %p="Your friend votes your response to be useful in the question below."
 -if !@question.blank?
