--- a/app/views/notification_mailer/comment_notification.html.haml
+++ b/app/views/notification_mailer/comment_notification.html.haml
@@ -1,5 +1,5 @@
 / NotificationMailer#comment_notification
-=image_tag attachments["greendolphin_logo.png"].url
+%img(src="#{Rails.root}/app/assets/images/greendolphin_logo.png")
 %br
 
 %p="Dear #{@user.name}"
