--- a/app/views/notification_mailer/useful_notification.html.haml
+++ b/app/views/notification_mailer/useful_notification.html.haml
@@ -1,4 +1,4 @@
-=image_tag attachments["greendolphin_logo.png"].url
+%img(src="#{Rails.root}/app/assets/images/greendolphin_logo.png")
 %br
 
 %p="Dear #{@user.name}"
