Add the logo attached

--- a/app/views/notification_mailer/expert_notification.html.haml
+++ b/app/views/notification_mailer/expert_notification.html.haml
@@ -1,5 +1,5 @@
 / NotificationMailer#expert_notification
-%img(src="#{Rails.root}/app/assets/images/greendolphin_logo.png")
+=image_tag attachments["greendolphin_logo.png"].url
 %br
 
 ="Dear #{@user.name}"
