--- a/app/views/notification_mailer/good_answer_notification.html.haml
+++ b/app/views/notification_mailer/good_answer_notification.html.haml
@@ -1,5 +1,5 @@
 /NotificationMailer#good_answer_notification
-%img(src="#{Rails.root}/app/assets/images/greendolphin_logo.png")
+=image_tag attachments["greendolphin_logo.png"].url
 %br
 
 %p="Dear #{@user.name}"
