Change emails features and fixed the bug of notification
Notification did not show a good answer message.
- Change mails to send to all students in a hour for a normal case.
- Change mails to send to all students in a half hour for expert answers and fast answer

--- a/app/views/notifications/_notification.html.haml
+++ b/app/views/notifications/_notification.html.haml
@@ -10,3 +10,5 @@
   =render 'reply_notification', notification: notification
 - elsif notification.sendable_type == 'Useful'
   =render 'useful_notification', notification: notification
+- elsif notification.sendable_type == 'GoodAnswer'
+  =render 'good_answer_notification', notification: notification
