--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -8,7 +8,7 @@
     %ul.nav
       %li.divider-vertical
       %li
-        - notification_count = current_notifications.count
+        / - notification_count = current_notifications.count
         = link_to pluralize(current_notifications.count,'Notifications'), notifications_path, id: 'number_of_notifications'
       %li.divider-vertical
       = form_tag questions_path, method: :get, class: 'navbar-search pull-left' do
