--- a/app/views/questions/index.html.haml
+++ b/app/views/questions/index.html.haml
@@ -2,7 +2,12 @@
   .span2
   .span8
     .page-header 
-      %h1 Questions
+      .row-fluid 
+        .span4
+          %h1 Questions
+        .span4.offset4
+          .btn-group.pull-right#newQuestion
+            = link_to 'New Question', new_question_path, class: 'btn btn-primary'
     .row
       .span8
         #tag_cloud
@@ -12,5 +17,5 @@
 
     = render 'question_feed'
 
-    = link_to 'New Question', new_question_path, class: 'btn btn-primary'
+    
 
