--- a/app/views/user_feedbacks/index.html.haml
+++ b/app/views/user_feedbacks/index.html.haml
@@ -46,5 +46,5 @@
     .row
       .span8
         = will_paginate @user_feedbacks
-    = link_to 'Writ feedback', new_user_feedback_path, class: 'btn btn-primary'
+    = link_to 'Write feedback', new_user_feedback_path, class: 'btn btn-primary'
 
