--- a/app/views/users/performance.html.haml
+++ b/app/views/users/performance.html.haml
@@ -91,7 +91,7 @@
         .span4
           .row
             .span4
-              %h4= "Your had <strong>#{@number_replies}</strong> useful responds.".html_safe
+              %h4= "Your had <strong>#{@number_replies}</strong> replies responds.".html_safe
               - users_replies = Reply.group("user_id").count()
               - maximum_replies = 0
               - average_replies = 0
