--- a/app/views/users/performance.html.haml
+++ b/app/views/users/performance.html.haml
@@ -28,7 +28,7 @@
           .span4
             .row
               .span4
-                %h4= "Your had #{@number_answers} answers.".html_safe
+                %h4= "You had #{@number_answers} answers.".html_safe
                 - users_answers = Comment.group("user_id").count()
                 - maximum_answers = 0
                 - average_answers = 0
@@ -49,7 +49,7 @@
           .span4
             .row
               .span4
-                %h4= "Your had <strong>#{@number_questions}</strong> questions.".html_safe
+                %h4= "You had <strong>#{@number_questions}</strong> questions.".html_safe
                 - users_questions = Question.group("user_id").count()
                 - maximum_questions = 0
                 - average_questions = 0
@@ -70,7 +70,7 @@
           .span4
             .row
               .span4
-                %h4= "Your had <strong>#{@number_usefuls}</strong> useful responds.".html_safe
+                %h4= "You had <strong>#{@number_usefuls}</strong> useful responds.".html_safe
                 - users_usefuls = Useful.group("user_id").count()
                 - maximum_usefuls = 0
                 - average_usefuls = 0
@@ -91,7 +91,7 @@
         .span4
           .row
             .span4
-              %h4= "Your had <strong>#{@number_replies}</strong> replies responds.".html_safe
+              %h4= "You had <strong>#{@number_replies}</strong> replies responds.".html_safe
               - users_replies = Reply.group("user_id").count()
               - maximum_replies = 0
               - average_replies = 0
