--- a/app/views/notifications/_useful_notification.html.haml
+++ b/app/views/notifications/_useful_notification.html.haml
@@ -6,7 +6,7 @@
         - question = useful.useful_parent_question
         %p
           %i.icon-question-sign
-          Your friend votes your response to be useful in the question below.
+          You get 5 points, since a friend who votes your response to be useful in the question below.
       .span2
         = time_ago_in_words(notification.created_at) + ' ago'
       .span2
