--- a/app/views/users/help.html.haml
+++ b/app/views/users/help.html.haml
@@ -125,7 +125,7 @@
       %section#Points
       .page-header
         %h2
-          Points System
+          Reward System
     %p
       You will get points when you help your friends. The leader board will show your rank in the class. 
       %table.table.table-hover
@@ -141,7 +141,7 @@
             %td
               A student answers a question.
             %td
-              +10
+              +3
           %tr
             %td
               A student gets the best answer.
@@ -166,7 +166,12 @@
             %td
               A student votes a useful question or answer. 
             %td
-              +2         
+              +3
+          %tr
+            %td
+              A question or answer owner get a useful vote. 
+            %td
+              +5         
           %tr
             %td
               A student needs a fast answer. 
