--- a/app/views/comments/_normal_content.html.haml
+++ b/app/views/comments/_normal_content.html.haml
@@ -5,7 +5,8 @@
   .span8{ id: "comment_control_#{comment.id}" }
     - owner = current_user_owner?(User.find(comment.user_id))
     - user_useful_array = comment.usefuls.where(user_id: current_user.id)
-    = useful_comment_link(user_useful_array, comment)
+    - if !owner
+      = useful_comment_link(user_useful_array, comment)
     = best_answer(@good_answer, comment)
     - if @admin || @question_owner
       = good_answer_button(@good_answer, comment)
