--- a/app/views/notification_mailer/useful_notification.html.haml
+++ b/app/views/notification_mailer/useful_notification.html.haml
@@ -2,7 +2,7 @@
 %br
 
 %p="Dear #{@user.name}"
-%p="Your friend votes your response to be useful in the question below."
+%p="Your friend votes your response to be useful in the question below, and you get 5 points from the vote."
 -if !@question.blank?
   =link_to @question.title,question_url(@question)
 %p="Thank you"
