--- a/app/views/comments/_normal_content.html.haml
+++ b/app/views/comments/_normal_content.html.haml
@@ -7,8 +7,8 @@
     - user_useful_array = comment.usefuls.where(user_id: current_user.id)
     - if !owner
       = useful_comment_link(user_useful_array, comment)
-      = best_answer(@good_answer, comment)
-    - if @admin || @question_owner
+    = best_answer(@good_answer, comment)
+    - if (@admin || @question_owner) & !owner
       = good_answer_button(@good_answer, comment)
     - if @admin || owner
       = link_to edit_comment_path(comment), class: 'btn btn-small' do
