Fixed an misspell in the help page

--- a/app/views/users/help.html.haml
+++ b/app/views/users/help.html.haml
@@ -169,7 +169,7 @@
               +3
           %tr
             %td
-              A question or answer owner get a useful vote. 
+              A question or answer owner gets a useful vote. 
             %td
               +5         
           %tr
